# libdsp

./: CMakeLists.txt  readme.md
include/: common.h  constants.h  encoder.h  filter.h  loop.h  modulation.h  oscillators.h  sampler.h  transformer.h
src/: encoder.c  filter.c  loop.c  modulation.c  oscillators.c  sampler.c  transformer.c
